#
# Makefile.am -- build the library
#
# (c) 2014 Prof Dr Andreas Mueller, Hochschule Rapperswil
#
lib_LTLIBRARIES = libqhyccd.la

libqhyccd_la_SOURCES = debug.cpp exceptions.cpp utils.cpp image.cpp buffer.cpp \
	device.cpp pdevice.cpp dc201.cpp pdc201.cpp reg.cpp factory.cpp \
	camera.cpp pcamera.cpp \
	qhy8pro.cpp

